# jam2024-dvd

./: Cargo.toml  index.html
pkg/: package.json  webassembly_webgl_viewer.d.ts  webassembly_webgl_viewer.js  webassembly_webgl_viewer_bg.wasm  webassembly_webgl_viewer_bg.wasm.d.ts
scripts/: main.js
src/: lib.rs
